--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>My CI/CD WebApp</title>
 </head>
 <body>
-    <h1>Welcome to My CI/CD Web Application!</h1>
+    <h1>Welcome to My Updated CI/CD Web Application!</h1>
     <p>This is a simple HTML page to demonstrate Jenkins CI/CD pipeline with Docker.</p>
+    <p>Update: This page was modified to trigger a Jenkins build via GitHub webhook integration.</p>
 </body>
 </html>
