Updated index.html using echo to trigger Jenkins build

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>My CI/CD WebApp</title>
 </head>
 <body>
-    <h1>Welcome to My Updated CI/CD Web Application!</h1>
-    <p>This is a simple HTML page to demonstrate Jenkins CI/CD pipeline with Docker.</p>
-    <p>Update: This page was modified to trigger a Jenkins build via GitHub webhook integration.</p>
+    <h1>Welcome to My Latest Updated CI/CD Web Application!</h1>
+    <p>This is another update to trigger the Jenkins CI/CD build.</p>
 </body>
 </html>
